wx-base/include/generated.h

// CLASS: wxFFile
void wxFFile_delete(wxFFile *self);
wxFFile *wxFFile_new();
wxFFile *wxFFile_new1(FILE * fp);
wxFFile *wxFFile_new2(const wxString * filename, const wxString * mode);
void wxFFile_Attach(wxFFile * self, FILE * fp, const wxString * name);
bool wxFFile_Close(wxFFile * self);
FILE * wxFFile_Detach(wxFFile * self);
bool wxFFile_Eof(const wxFFile * self);
bool wxFFile_Error(const wxFFile * self);
bool wxFFile_Flush(wxFFile * self);
wxString *wxFFile_GetName(const wxFFile * self);
bool wxFFile_IsOpened(const wxFFile * self);
bool wxFFile_Open(wxFFile * self, const wxString * filename, const wxString * mode);
size_t wxFFile_Read(wxFFile * self, void * buffer, size_t count);
bool wxFFile_ReadAll(wxFFile * self, wxString * str, const wxMBConv * conv);
bool wxFFile_Write(wxFFile * self, const wxString * str, const wxMBConv * conv);
size_t wxFFile_Write1(wxFFile * self, const void * buffer, size_t count);
FILE * wxFFile_fp(const wxFFile * self);
// CLASS: wxFSFile
wxClassInfo *wxFSFile_CLASSINFO();
wxFSFile *wxFSFile_new(wxInputStream * stream, const wxString * location, const wxString * mimetype, const wxString * anchor, wxDateTime modif);
wxInputStream * wxFSFile_DetachStream(wxFSFile * self);
wxString *wxFSFile_GetAnchor(const wxFSFile * self);
wxString *wxFSFile_GetLocation(const wxFSFile * self);
wxString *wxFSFile_GetMimeType(const wxFSFile * self);
wxDateTime *wxFSFile_GetModificationTime(const wxFSFile * self);
wxInputStream * wxFSFile_GetStream(const wxFSFile * self);
// CLASS: wxFSVolume
void wxFSVolume_delete(wxFSVolume *self);
wxFSVolume *wxFSVolume_new();
wxFSVolume *wxFSVolume_new1(const wxString * name);
bool wxFSVolume_Create(wxFSVolume * self, const wxString * name);
bool wxFSVolume_IsOk(const wxFSVolume * self);
int wxFSVolume_GetFlags(const wxFSVolume * self);
bool wxFSVolume_IsWritable(const wxFSVolume * self);
wxString *wxFSVolume_GetName(const wxFSVolume * self);
wxString *wxFSVolume_GetDisplayName(const wxFSVolume * self);
wxArrayString *wxFSVolume_GetVolumes(int flags_set, int flags_unset);
void wxFSVolume_CancelSearch();
// CLASS: wxFile
void wxFile_delete(wxFile *self);
wxFile *wxFile_new();
wxFile *wxFile_new2(int fd);
int wxFile_GetLastError(const wxFile * self);
void wxFile_ClearLastError(wxFile * self);
void wxFile_Attach(wxFile * self, int fd);
bool wxFile_Close(wxFile * self);
bool wxFile_Create(wxFile * self, const wxString * filename, bool overwrite, int access);
int wxFile_Detach(wxFile * self);
bool wxFile_Eof(const wxFile * self);
bool wxFile_Flush(wxFile * self);
bool wxFile_IsOpened(const wxFile * self);
bool wxFile_ReadAll(wxFile * self, wxString * str, const wxMBConv * conv);
size_t wxFile_Write(wxFile * self, const void * buffer, size_t count);
bool wxFile_Write1(wxFile * self, const wxString * s, const wxMBConv * conv);
int wxFile_fd(const wxFile * self);
bool wxFile_Exists(const wxString * filename);