wx-base/src/generated/ffi.rs


    // wxFFile
    pub fn wxFFile_delete(self_: *mut c_void);
    pub fn wxFFile_new() -> *mut c_void;
    pub fn wxFFile_new1(fp: *mut c_void) -> *mut c_void;
    pub fn wxFFile_new2(filename: *const c_void, mode: *const c_void) -> *mut c_void;
    // DTOR: pub fn wxFFile_~wxFFile(self_: *mut c_void);
    pub fn wxFFile_Attach(self_: *mut c_void, fp: *mut c_void, name: *const c_void);
    pub fn wxFFile_Close(self_: *mut c_void) -> bool;
    pub fn wxFFile_Detach(self_: *mut c_void) -> *mut c_void;
    pub fn wxFFile_Eof(self_: *const c_void) -> bool;
    pub fn wxFFile_Error(self_: *const c_void) -> bool;
    pub fn wxFFile_Flush(self_: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFFile_GetKind(self_: *const c_void) -> wxFileKind;
    pub fn wxFFile_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxFFile_IsOpened(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFFile_Length(self_: *const c_void) -> wxFileOffset;
    pub fn wxFFile_Open(self_: *mut c_void, filename: *const c_void, mode: *const c_void) -> bool;
    pub fn wxFFile_Read(self_: *mut c_void, buffer: *mut c_void, count: usize) -> usize;
    pub fn wxFFile_ReadAll(self_: *mut c_void, str: *mut c_void, conv: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFFile_Seek(self_: *mut c_void, ofs: wxFileOffset, mode: wxSeekMode) -> bool;
    // NOT_SUPPORTED: pub fn wxFFile_SeekEnd(self_: *mut c_void, ofs: wxFileOffset) -> bool;
    // NOT_SUPPORTED: pub fn wxFFile_Tell(self_: *const c_void) -> wxFileOffset;
    pub fn wxFFile_Write(self_: *mut c_void, str: *const c_void, conv: *const c_void) -> bool;
    pub fn wxFFile_Write1(self_: *mut c_void, buffer: *const c_void, count: usize) -> usize;
    pub fn wxFFile_fp(self_: *const c_void) -> *mut c_void;

    // wxFSFile
    pub fn wxFSFile_CLASSINFO() -> *mut c_void;
    pub fn wxFSFile_new(
        stream: *mut c_void,
        location: *const c_void,
        mimetype: *const c_void,
        anchor: *const c_void,
        modif: wxDateTime,
    ) -> *mut c_void;
    pub fn wxFSFile_DetachStream(self_: *mut c_void) -> *mut c_void;
    pub fn wxFSFile_GetAnchor(self_: *const c_void) -> *mut c_void;
    pub fn wxFSFile_GetLocation(self_: *const c_void) -> *mut c_void;
    pub fn wxFSFile_GetMimeType(self_: *const c_void) -> *mut c_void;
    pub fn wxFSFile_GetModificationTime(self_: *const c_void) -> *mut c_void;
    pub fn wxFSFile_GetStream(self_: *const c_void) -> *mut c_void;

    // wxFSVolume
    pub fn wxFSVolume_delete(self_: *mut c_void);
    pub fn wxFSVolume_new() -> *mut c_void;
    pub fn wxFSVolume_new1(name: *const c_void) -> *mut c_void;
    pub fn wxFSVolume_Create(self_: *mut c_void, name: *const c_void) -> bool;
    pub fn wxFSVolume_IsOk(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFSVolume_GetKind(self_: *const c_void) -> wxFSVolumeKind;
    pub fn wxFSVolume_GetFlags(self_: *const c_void) -> c_int;
    pub fn wxFSVolume_IsWritable(self_: *const c_void) -> bool;
    pub fn wxFSVolume_GetName(self_: *const c_void) -> *mut c_void;
    pub fn wxFSVolume_GetDisplayName(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFSVolume_GetIcon(self_: *const c_void, type_: wxFSIconType) -> *mut c_void;
    pub fn wxFSVolume_GetVolumes(flags_set: c_int, flags_unset: c_int) -> *mut c_void;
    pub fn wxFSVolume_CancelSearch();

    // wxFile
    pub fn wxFile_delete(self_: *mut c_void);
    pub fn wxFile_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxFile_new1(filename: *const c_void, mode: wxFile::OpenMode) -> *mut c_void;
    pub fn wxFile_new2(fd: c_int) -> *mut c_void;
    // DTOR: pub fn wxFile_~wxFile(self_: *mut c_void);
    pub fn wxFile_GetLastError(self_: *const c_void) -> c_int;
    pub fn wxFile_ClearLastError(self_: *mut c_void);
    pub fn wxFile_Attach(self_: *mut c_void, fd: c_int);
    pub fn wxFile_Close(self_: *mut c_void) -> bool;
    pub fn wxFile_Create(
        self_: *mut c_void,
        filename: *const c_void,
        overwrite: bool,
        access: c_int,
    ) -> bool;
    pub fn wxFile_Detach(self_: *mut c_void) -> c_int;
    pub fn wxFile_Eof(self_: *const c_void) -> bool;
    pub fn wxFile_Flush(self_: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFile_GetKind(self_: *const c_void) -> wxFileKind;
    pub fn wxFile_IsOpened(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFile_Length(self_: *const c_void) -> wxFileOffset;
    // NOT_SUPPORTED: pub fn wxFile_Open(self_: *mut c_void, filename: *const c_void, mode: wxFile::OpenMode, access: c_int) -> bool;
    // NOT_SUPPORTED: pub fn wxFile_Read(self_: *mut c_void, buffer: *mut c_void, count: usize) -> ssize_t;
    pub fn wxFile_ReadAll(self_: *mut c_void, str: *mut c_void, conv: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxFile_Seek(self_: *mut c_void, ofs: wxFileOffset, mode: wxSeekMode) -> wxFileOffset;
    // NOT_SUPPORTED: pub fn wxFile_SeekEnd(self_: *mut c_void, ofs: wxFileOffset) -> wxFileOffset;
    // NOT_SUPPORTED: pub fn wxFile_Tell(self_: *const c_void) -> wxFileOffset;
    pub fn wxFile_Write(self_: *mut c_void, buffer: *const c_void, count: usize) -> usize;
    pub fn wxFile_Write1(self_: *mut c_void, s: *const c_void, conv: *const c_void) -> bool;
    pub fn wxFile_fd(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxFile_Access(name: *const c_void, mode: wxFile::OpenMode) -> bool;
    pub fn wxFile_Exists(filename: *const c_void) -> bool;
